Bug 43704 - X crashes with libdrm master
Summary: X crashes with libdrm master
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-10 17:24 UTC by Cyril Brulebois
Modified: 2011-12-11 05:53 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Whole dmesg. (50.54 KB, application/octet-stream)
2011-12-10 17:24 UTC, Cyril Brulebois
no flags Details
Compressed i915_error_state. (142.91 KB, application/octet-stream)
2011-12-10 17:25 UTC, Cyril Brulebois
no flags Details
Whole 0/ directory from debugfs. (299.58 KB, application/octet-stream)
2011-12-10 17:26 UTC, Cyril Brulebois
no flags Details

Description Cyril Brulebois 2011-12-10 17:24:15 UTC
Created attachment 54308 [details]
Whole dmesg.

Hi,

somewhat related to #43554 and <http://bugs.debian.org/651316>: I'm getting an X crash and a hung GPU (just by running vlc or mplayer on a random video) with the following components:
 - Linux kernel 3.2.0-rc4-amd64
 - libdrm git master (dd9a5b4f7fb07c78db4e7481bedca1b981030e3f)
 - xf86-video-intel git master (b5a6bc9e33a2797c926969e1f98b4a9a796248c5)
 - patched libva (https://bugs.freedesktop.org/show_bug.cgi?id=43554#c3);
   I think Chris mentioned on IRC this patch might need some extra hunks,
   but I don't think it's OK for the GPU to hang, so I'm reporting this bug.

I'll be attaching dmesg, i915_error_state, and the whole parent 0/ directory.
Comment 1 Cyril Brulebois 2011-12-10 17:25:40 UTC
Created attachment 54309 [details]
Compressed i915_error_state.
Comment 2 Cyril Brulebois 2011-12-10 17:26:44 UTC
Created attachment 54310 [details]
Whole 0/ directory from debugfs.
Comment 3 Chris Wilson 2011-12-10 17:42:06 UTC
commit eb859f644633ee716083d253a5b7ff95163380e5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Dec 11 01:34:05 2011 +0000

    uxa/video: Correct the offset of the binding table in the surface buffer
    
    The binding table is intended to be after all the surface descriptions,
    so make sure we write it with the appropriate offset into the buffer.
    
    Fixes regression from 699888a64 (uxa/video: Use the common bo
    allocations and upload)
    
    Reported-by: Cyril Brulebois <kibi@debian.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43704
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 4 Chris Wilson 2011-12-10 17:43:04 UTC
The backtrace from the crash might be useful as well, even in the event of a calamity we shouldn't crash.
Comment 5 Cyril Brulebois 2011-12-10 17:52:13 UTC
Fixed indeed, thanks!
Comment 6 Cyril Brulebois 2011-12-11 05:53:00 UTC
Oops, sorry for the UNCONFIRMED status, let's go back to RESOLVED/FIXED.

As discussed on IRC: without that fix, the server isn't actually crashing, only gnome-shell/session is (hung GPU is something gnome-s* doesn't like).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.