uxa/video: Correct the offset of the binding table in the surface buffer

The binding table is intended to be after all the surface descriptions,
so make sure we write it with the appropriate offset into the buffer.

Fixes regression from 699888a64 (uxa/video: Use the common bo
allocations and upload)

Reported-by: Cyril Brulebois <kibi@debian.org>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43704
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>